# rust-browser-mcp

./: .gitignore  ANALIZA_I_REKOMENDACJE.md  Cargo.toml  MCP_INTEGRATION.md  README.md  asas.ini  check_output.txt  chrome_err.txt  package-lock.json  package.json  rust-browser-mcp-wrapper.ps1  rust-browser.code-workspace  servers.json  test_chain.txt  test_chain_err.txt  test_hn.txt  test_input.txt  test_mcp.ps1  test_mcp_py.py  test_onet.ps1  test_out.txt  test_real.py  test_stderr.txt  test_wiki.py  test_wiki_out.txt  wiki_out.txt
chrome_agent_profile/: CrashpadMetrics-active.pma  DevToolsActivePort  Local State
chrome_agent_profile/Default/: BrowsingTopicsState  DIPS-wal  History  History-journal  MediaDeviceSalts  Preferences  Secure Preferences  Web Data  passkey_enclave_state
chrome_agent_profile/Default/DawnGraphiteCache/: data_1  index
chrome_agent_profile/Default/DawnWebGPUCache/: data_1  index
chrome_agent_profile/Default/Extension Rules/: LOG
chrome_agent_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  index
chrome_agent_profile/GraphiteDawnCache/: data_1  index
chrome_agent_profile/ShaderCache/: data_1  index
chrome_agent_profile/component_crx_cache/: metadata.json
chrome_agent_profile/segmentation_platform/: ukm_db
chrome_test_profile/: Local State
chrome_test_profile/Default/: Account Web Data  Account Web Data-journal
chrome_test_profile/GrShaderCache/: index
chrome_test_profile/GraphiteDawnCache/: index
chrome_test_profile/ShaderCache/: index
src/: browser.rs  captcha.rs  main.rs  mcp.rs  types.rs
(+60 files in other folders)
