[package]
name = "rust-browser-mcp"
version = "0.1.0"
edition = "2021"
description = "AI Browser via MCP - Chrome CDP + JS DOM extractor = WAP/semantic XML"

[[bin]]
name = "rust-browser-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Silnik: prawdziwy Chrome przez CDP (mattsse/chromiumoxide)
# - ładuje strony z pełnym JS (React/Vue/SPA - wszystko)
# - wstrzykujemy JS extractor → żywy DOM jako WAP-XML
# - ten sam instance robi screenshoty dla Judge LLM Vision
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"

# base64 dla screenshotów → LLM Vision
base64 = "0.22"

# HTTP client - tylko do API captcha serwisów (2captcha, anti-captcha, CapMonster)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
